--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 .containe{
   padding: 40px 0;
 }
+  
+  @media(max-width: 1028px){
+  .containe{
+    padding: 500px 0;
+  }
+}
 
 .login_btn{
 color: black;
