--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ background-color: #D3DEDC ;
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#footer">Home</a>
+            <a class="nav-link" href="https://pradeep1g.github.io/_HomePageR/">Home</a>
           </li>
 
 
