--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ background-color: #D3DEDC ;
   						<input type="checkbox">Remember Me
   					</div>
   					<div class="form-group">
-  						<input type="submit" value="REGISTER" class="btn float-right login_btn">
+  						<a href="https://pradeep1g.github.io/_HomePageR/" button type="button"  class="btn btn-primary  btn-lg download-button">Login</button></a>
   					</div>
   				</form>
   			</div>
