--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@ background-color: #D3DEDC ;
 
 
 
-    <p>© Copyright Ride On Wheels</p>
-    <p><b>By Our Team</b></p>
+    <p>© 2022 Copyright Ride On Wheels</p>
+    <p><b>Coders Clan</b></p>
 
   </footer>
   </body>
