--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ background-color: #D3DEDC ;
   					<div class="row align-items-center remember">
   						<input type="checkbox">Remember Me
   					</div>
-  					<div class="form-group">
-  						<a href="https://pradeep1g.github.io/_HomePageR/" button type="button"  class="btn btn-primary  btn-lg download-button">Login</button></a>
+  					<div class="form-button">
+  					<a href="https://pradeep1g.github.io/_login/" input type="submit" value="LOGIN" class="btn float-right login_btn">Register</a>	
   					</div>
   				</form>
   			</div>
